OP/c2fsmd.output
Terminals which are not used

   MAIN
   "<"
   ">"
   "+"
   "-"
   "*"
   "/"
   "%"
   "!"
   UPOS
   UNEG


State 336 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 cnst: CONSTANT
    2     | FLOAT_CONSTANT
    3     | STOR_CONSTANT

    4 primary_expression: IDENTIFIER
    5                   | cnst
    6                   | STRING_LITERAL
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression PTR_OP IDENTIFIER
   14                   | postfix_expression INC_OP
   15                   | postfix_expression DEC_OP

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list ',' assignment_expression

   18 unary_expression: postfix_expression
   19                 | INC_OP unary_expression
   20                 | DEC_OP unary_expression
   21                 | unary_operator cast_expression
   22                 | SIZEOF unary_expression
   23                 | SIZEOF '(' type_name ')'

   24 unary_operator: '&'
   25               | '*'
   26               | '+'
   27               | '-'
   28               | '~'
   29               | '!'

   30 cast_expression: unary_expression
   31                | '(' type_name ')' cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression '*' cast_expression
   34                          | multiplicative_expression '/' cast_expression
   35                          | multiplicative_expression '%' cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression '+' multiplicative_expression
   38                    | additive_expression '-' multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_OP additive_expression
   41                 | shift_expression RIGHT_OP additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression '<' shift_expression
   44                      | relational_expression '>' shift_expression
   45                      | relational_expression LE_OP shift_expression
   46                      | relational_expression GE_OP shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression EQ_OP relational_expression
   49                    | equality_expression NE_OP relational_expression

   50 and_expression: equality_expression
   51               | and_expression '&' equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression '^' and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression '|' exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression AND_OP inclusive_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression OR_OP logical_and_expression

   60 conditional_expression: logical_or_expression
   61                       | logical_or_expression '?' expression ':' conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: '='
   65                    | MUL_ASSIGN
   66                    | DIV_ASSIGN
   67                    | MOD_ASSIGN
   68                    | ADD_ASSIGN
   69                    | SUB_ASSIGN
   70                    | LEFT_ASSIGN
   71                    | RIGHT_ASSIGN
   72                    | AND_ASSIGN
   73                    | XOR_ASSIGN
   74                    | OR_ASSIGN

   75 expression: assignment_expression
   76           | expression ',' assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers ';'
   79            | declaration_specifiers init_declarator_list ';'

   80 declaration_specifiers: storage_class_specifier
   81                       | storage_class_specifier declaration_specifiers
   82                       | type_specifier
   83                       | type_specifier declaration_specifiers
   84                       | type_qualifier
   85                       | type_qualifier declaration_specifiers

   86 init_declarator_list: init_declarator
   87                     | init_declarator_list ',' init_declarator

   88 init_declarator: declarator
   89                | declarator '=' initializer

   90 storage_class_specifier: TYPEDEF
   91                        | EXTERN
   92                        | STATIC
   93                        | AUTO
   94                        | REGISTER

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE
  102               | SIGNED
  103               | UNSIGNED
  104               | struct_or_union_specifier
  105               | enum_specifier
  106               | TYPE_NAME

  107 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  108                          | struct_or_union '{' struct_declaration_list '}'
  109                          | struct_or_union IDENTIFIER

  110 struct_or_union: STRUCT
  111                | UNION

  112 struct_declaration_list: struct_declaration
  113                        | struct_declaration_list struct_declaration

  114 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  115 specifier_qualifier_list: type_specifier specifier_qualifier_list
  116                         | type_specifier
  117                         | type_qualifier specifier_qualifier_list
  118                         | type_qualifier

  119 struct_declarator_list: struct_declarator
  120                       | struct_declarator_list ',' struct_declarator

  121 struct_declarator: declarator
  122                  | ':' constant_expression
  123                  | declarator ':' constant_expression

  124 enum_specifier: ENUM '{' enumerator_list '}'
  125               | ENUM IDENTIFIER '{' enumerator_list '}'
  126               | ENUM IDENTIFIER

  127 enumerator_list: enumerator
  128                | enumerator_list ',' enumerator

  129 enumerator: IDENTIFIER
  130           | IDENTIFIER '=' constant_expression

  131 type_qualifier: CONST
  132               | VOLATILE

  133 declarator: pointer direct_declarator
  134           | direct_declarator

  135 direct_declarator: IDENTIFIER
  136                  | '(' declarator ')'
  137                  | direct_declarator '[' constant_expression ']'
  138                  | direct_declarator '[' ']'
  139                  | direct_declarator '(' parameter_type_list ')'
  140                  | direct_declarator '(' identifier_list ')'
  141                  | direct_declarator '(' ')'

  142 pointer: '*'
  143        | '*' type_qualifier_list
  144        | '*' pointer
  145        | '*' type_qualifier_list pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list ',' ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list ',' parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers abstract_declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list
  158          | specifier_qualifier_list abstract_declarator

  159 abstract_declarator: pointer
  160                    | direct_abstract_declarator
  161                    | pointer direct_abstract_declarator

  162 direct_abstract_declarator: '(' abstract_declarator ')'
  163                           | '[' ']'
  164                           | '[' constant_expression ']'
  165                           | direct_abstract_declarator '[' ']'
  166                           | direct_abstract_declarator '[' constant_expression ']'
  167                           | '(' ')'
  168                           | '(' parameter_type_list ')'
  169                           | direct_abstract_declarator '(' ')'
  170                           | direct_abstract_declarator '(' parameter_type_list ')'

  171 initializer: assignment_expression
  172            | '{' initializer_list '}'
  173            | '{' initializer_list ',' '}'

  174 initializer_list: initializer
  175                 | initializer_list ',' initializer

  176 statement: labeled_statement
  177          | compound_statement
  178          | expression_statement
  179          | selection_statement
  180          | iteration_statement
  181          | jump_statement

  182 labeled_statement: IDENTIFIER ':' statement
  183                  | CASE constant_expression ':' statement
  184                  | DEFAULT ':' statement

  185 compound_statement: '{' '}'
  186                   | '{' statement_list '}'
  187                   | '{' declaration_list '}'
  188                   | '{' declaration_list statement_list '}'

  189 declaration_list: declaration
  190                 | declaration_list declaration

  191 statement_list: statement
  192               | statement_list statement

  193 expression_statement: ';'
  194                     | expression ';'

  195 selection_statement: IF '(' expression ')' statement
  196                    | IF '(' expression ')' statement ELSE statement
  197                    | SWITCH '(' expression ')' statement

  198 iteration_statement: WHILE '(' expression ')' statement
  199                    | DO statement WHILE '(' expression ')' ';'
  200                    | FOR '(' expression_statement expression_statement ')' statement
  201                    | FOR '(' expression_statement expression_statement expression ')' statement

  202 jump_statement: GOTO IDENTIFIER ';'
  203               | CONTINUE ';'
  204               | BREAK ';'
  205               | RETURN ';'
  206               | RETURN expression ';'

  207 translation_unit: external_declaration
  208                 | translation_unit external_declaration

  209 external_declaration: function_definition
  210                     | declaration

  211 function_definition: declaration_specifiers declarator declaration_list compound_statement
  212                    | declaration_specifiers declarator compound_statement
  213                    | declarator declaration_list compound_statement
  214                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 29
'%' (37) 35
'&' (38) 24 51
'(' (40) 7 10 11 23 31 136 139 140 141 162 167 168 169 170 195 196
    197 198 199 200 201
')' (41) 7 10 11 23 31 136 139 140 141 162 167 168 169 170 195 196
    197 198 199 200 201
'*' (42) 25 33 142 143 144 145
'+' (43) 26 37
',' (44) 17 76 87 120 128 149 151 156 173 175
'-' (45) 27 38
'.' (46) 12
'/' (47) 34
':' (58) 61 122 123 182 183 184
';' (59) 78 79 114 193 194 199 202 203 204 205 206
'<' (60) 43
'=' (61) 64 89 130
'>' (62) 44
'?' (63) 61
'[' (91) 9 137 138 163 164 165 166
']' (93) 9 137 138 163 164 165 166
'^' (94) 53
'{' (123) 107 108 124 125 172 173 185 186 187 188
'|' (124) 55
'}' (125) 107 108 124 125 172 173 185 186 187 188
'~' (126) 28
error (256)
STOR_CONSTANT (258) 3
IDENTIFIER (259) 4 12 13 107 109 125 126 129 130 135 155 156 182 202
CONSTANT (260) 1
FLOAT_CONSTANT (261) 2
STRING_LITERAL (262) 6
SIZEOF (263) 22 23
PTR_OP (264) 13
INC_OP (265) 14 19
DEC_OP (266) 15 20
LEFT_OP (267) 40
RIGHT_OP (268) 41
LE_OP (269) 45
GE_OP (270) 46
EQ_OP (271) 48
NE_OP (272) 49
AND_OP (273) 57
OR_OP (274) 59
MUL_ASSIGN (275) 65
DIV_ASSIGN (276) 66
MOD_ASSIGN (277) 67
ADD_ASSIGN (278) 68
SUB_ASSIGN (279) 69
LEFT_ASSIGN (280) 70
RIGHT_ASSIGN (281) 71
AND_ASSIGN (282) 72
XOR_ASSIGN (283) 73
OR_ASSIGN (284) 74
TYPE_NAME (285) 106
TYPEDEF (286) 90
EXTERN (287) 91
STATIC (288) 92
AUTO (289) 93
REGISTER (290) 94
CHAR (291) 96
SHORT (292) 97
INT (293) 98
LONG (294) 99
SIGNED (295) 102
UNSIGNED (296) 103
FLOAT (297) 100
DOUBLE (298) 101
CONST (299) 131
VOLATILE (300) 132
VOID (301) 95
STRUCT (302) 110
UNION (303) 111
ENUM (304) 124 125 126
ELLIPSIS (305) 149
CASE (306) 183
DEFAULT (307) 184
IF (308) 195 196
ELSE (309) 196
SWITCH (310) 197
WHILE (311) 198 199
DO (312) 199
FOR (313) 200 201
GOTO (314) 202
CONTINUE (315) 203
BREAK (316) 204
RETURN (317) 205 206
MAIN (318)
"<" (319)
">" (320)
"+" (321)
"-" (322)
"*" (323)
"/" (324)
"%" (325)
"!" (326)
UPOS (327)
UNEG (328)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
cnst (99)
    on left: 1 2 3, on right: 5
primary_expression (100)
    on left: 4 5 6 7, on right: 8
postfix_expression (101)
    on left: 8 9 10 11 12 13 14 15, on right: 9 10 11 12 13 14 15 18
argument_expression_list (102)
    on left: 16 17, on right: 11 17
unary_expression (103)
    on left: 18 19 20 21 22 23, on right: 19 20 22 30 63
unary_operator (104)
    on left: 24 25 26 27 28 29, on right: 21
cast_expression (105)
    on left: 30 31, on right: 21 31 32 33 34 35
multiplicative_expression (106)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
additive_expression (107)
    on left: 36 37 38, on right: 37 38 39 40 41
shift_expression (108)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
relational_expression (109)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
equality_expression (110)
    on left: 47 48 49, on right: 48 49 50 51
and_expression (111)
    on left: 50 51, on right: 51 52 53
exclusive_or_expression (112)
    on left: 52 53, on right: 53 54 55
inclusive_or_expression (113)
    on left: 54 55, on right: 55 56 57
logical_and_expression (114)
    on left: 56 57, on right: 57 58 59
logical_or_expression (115)
    on left: 58 59, on right: 59 60 61
conditional_expression (116)
    on left: 60 61, on right: 61 62 77
assignment_expression (117)
    on left: 62 63, on right: 16 17 63 75 76 171
assignment_operator (118)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 63
expression (119)
    on left: 75 76, on right: 7 9 61 76 194 195 196 197 198 199 201
    206
constant_expression (120)
    on left: 77, on right: 122 123 130 137 164 166 183
declaration (121)
    on left: 78 79, on right: 189 190 210
declaration_specifiers (122)
    on left: 80 81 82 83 84 85, on right: 78 79 81 83 85 152 153 154
    211 212
init_declarator_list (123)
    on left: 86 87, on right: 79 87
init_declarator (124)
    on left: 88 89, on right: 86 87
storage_class_specifier (125)
    on left: 90 91 92 93 94, on right: 80 81
type_specifier (126)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106,
    on right: 82 83 115 116
struct_or_union_specifier (127)
    on left: 107 108 109, on right: 104
struct_or_union (128)
    on left: 110 111, on right: 107 108 109
struct_declaration_list (129)
    on left: 112 113, on right: 107 108 113
struct_declaration (130)
    on left: 114, on right: 112 113
specifier_qualifier_list (131)
    on left: 115 116 117 118, on right: 114 115 117 157 158
struct_declarator_list (132)
    on left: 119 120, on right: 114 120
struct_declarator (133)
    on left: 121 122 123, on right: 119 120
enum_specifier (134)
    on left: 124 125 126, on right: 105
enumerator_list (135)
    on left: 127 128, on right: 124 125 128
enumerator (136)
    on left: 129 130, on right: 127 128
type_qualifier (137)
    on left: 131 132, on right: 84 85 117 118 146 147
declarator (138)
    on left: 133 134, on right: 88 89 121 123 136 152 211 212 213 214
direct_declarator (139)
    on left: 135 136 137 138 139 140 141, on right: 133 134 137 138
    139 140 141
pointer (140)
    on left: 142 143 144 145, on right: 133 144 145 159 161
type_qualifier_list (141)
    on left: 146 147, on right: 143 145 147
parameter_type_list (142)
    on left: 148 149, on right: 139 168 170
parameter_list (143)
    on left: 150 151, on right: 148 149 151
parameter_declaration (144)
    on left: 152 153 154, on right: 150 151
identifier_list (145)
    on left: 155 156, on right: 140 156
type_name (146)
    on left: 157 158, on right: 23 31
abstract_declarator (147)
    on left: 159 160 161, on right: 153 158 162
direct_abstract_declarator (148)
    on left: 162 163 164 165 166 167 168 169 170, on right: 160 161
    165 166 169 170
initializer (149)
    on left: 171 172 173, on right: 89 174 175
initializer_list (150)
    on left: 174 175, on right: 172 173 175
statement (151)
    on left: 176 177 178 179 180 181, on right: 182 183 184 191 192
    195 196 197 198 199 200 201
labeled_statement (152)
    on left: 182 183 184, on right: 176
compound_statement (153)
    on left: 185 186 187 188, on right: 177 211 212 213 214
declaration_list (154)
    on left: 189 190, on right: 187 188 190 211 213
statement_list (155)
    on left: 191 192, on right: 186 188 192
expression_statement (156)
    on left: 193 194, on right: 178 200 201
selection_statement (157)
    on left: 195 196 197, on right: 179
iteration_statement (158)
    on left: 198 199 200 201, on right: 180
jump_statement (159)
    on left: 202 203 204 205 206, on right: 181
translation_unit (160)
    on left: 207 208, on right: 0 208
external_declaration (161)
    on left: 209 210, on right: 207 208
function_definition (162)
    on left: 211 212 213 214, on right: 209


state 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


state 1

  135 direct_declarator: IDENTIFIER .

    $default  reduce using rule 135 (direct_declarator)


state 2

  106 type_specifier: TYPE_NAME .

    $default  reduce using rule 106 (type_specifier)


state 3

   90 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 90 (storage_class_specifier)


state 4

   91 storage_class_specifier: EXTERN .

    $default  reduce using rule 91 (storage_class_specifier)


state 5

   92 storage_class_specifier: STATIC .

    $default  reduce using rule 92 (storage_class_specifier)


state 6

   93 storage_class_specifier: AUTO .

    $default  reduce using rule 93 (storage_class_specifier)


state 7

   94 storage_class_specifier: REGISTER .

    $default  reduce using rule 94 (storage_class_specifier)


state 8

   96 type_specifier: CHAR .

    $default  reduce using rule 96 (type_specifier)


state 9

   97 type_specifier: SHORT .

    $default  reduce using rule 97 (type_specifier)


state 10

   98 type_specifier: INT .

    $default  reduce using rule 98 (type_specifier)


state 11

   99 type_specifier: LONG .

    $default  reduce using rule 99 (type_specifier)


state 12

  102 type_specifier: SIGNED .

    $default  reduce using rule 102 (type_specifier)


state 13

  103 type_specifier: UNSIGNED .

    $default  reduce using rule 103 (type_specifier)


state 14

  100 type_specifier: FLOAT .

    $default  reduce using rule 100 (type_specifier)


state 15

  101 type_specifier: DOUBLE .

    $default  reduce using rule 101 (type_specifier)


state 16

  131 type_qualifier: CONST .

    $default  reduce using rule 131 (type_qualifier)


state 17

  132 type_qualifier: VOLATILE .

    $default  reduce using rule 132 (type_qualifier)


state 18

   95 type_specifier: VOID .

    $default  reduce using rule 95 (type_specifier)


state 19

  110 struct_or_union: STRUCT .

    $default  reduce using rule 110 (struct_or_union)


state 20

  111 struct_or_union: UNION .

    $default  reduce using rule 111 (struct_or_union)


state 21

  124 enum_specifier: ENUM . '{' enumerator_list '}'
  125               | ENUM . IDENTIFIER '{' enumerator_list '}'
  126               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


state 22

  136 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


state 23

  142 pointer: '*' .
  143        | '*' . type_qualifier_list
  144        | '*' . pointer
  145        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 142 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


state 24

  210 external_declaration: declaration .

    $default  reduce using rule 210 (external_declaration)


state 25

   78 declaration: declaration_specifiers . ';'
   79            | declaration_specifiers . init_declarator_list ';'
  211 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  212                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


state 26

   80 declaration_specifiers: storage_class_specifier .
   81                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 80 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


state 27

   82 declaration_specifiers: type_specifier .
   83                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


state 28

  104 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 104 (type_specifier)


state 29

  107 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  108                          | struct_or_union . '{' struct_declaration_list '}'
  109                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


state 30

  105 type_specifier: enum_specifier .

    $default  reduce using rule 105 (type_specifier)


state 31

   84 declaration_specifiers: type_qualifier .
   85                       | type_qualifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


state 32

  213 function_definition: declarator . declaration_list compound_statement
  214                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '{'        shift, and go to state 53

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 56
    declaration_list           go to state 57


state 33

  134 declarator: direct_declarator .
  137 direct_declarator: direct_declarator . '[' constant_expression ']'
  138                  | direct_declarator . '[' ']'
  139                  | direct_declarator . '(' parameter_type_list ')'
  140                  | direct_declarator . '(' identifier_list ')'
  141                  | direct_declarator . '(' ')'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 134 (declarator)


state 34

  133 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22

    direct_declarator  go to state 60


state 35

    0 $accept: translation_unit . $end
  208 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 61
    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    external_declaration       go to state 62
    function_definition        go to state 37


state 36

  207 translation_unit: external_declaration .

    $default  reduce using rule 207 (translation_unit)


state 37

  209 external_declaration: function_definition .

    $default  reduce using rule 209 (external_declaration)


state 38

  125 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  126               | ENUM IDENTIFIER .

    '{'  shift, and go to state 63

    $default  reduce using rule 126 (enum_specifier)


state 39

  124 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


state 40

  136 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 67


state 41

  146 type_qualifier_list: type_qualifier .

    $default  reduce using rule 146 (type_qualifier_list)


state 42

  144 pointer: '*' pointer .

    $default  reduce using rule 144 (pointer)


state 43

  143 pointer: '*' type_qualifier_list .
  145        | '*' type_qualifier_list . pointer
  147 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 143 (pointer)

    type_qualifier  go to state 68
    pointer         go to state 69


state 44

   78 declaration: declaration_specifiers ';' .

    $default  reduce using rule 78 (declaration)


state 45

   79 declaration: declaration_specifiers init_declarator_list . ';'
   87 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 70
    ';'  shift, and go to state 71


state 46

   86 init_declarator_list: init_declarator .

    $default  reduce using rule 86 (init_declarator_list)


state 47

   88 init_declarator: declarator .
   89                | declarator . '=' initializer
  211 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  212                    | declaration_specifiers declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '='        shift, and go to state 72
    '{'        shift, and go to state 53

    $default  reduce using rule 88 (init_declarator)

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 73
    declaration_list           go to state 74


state 48

   81 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 81 (declaration_specifiers)


state 49

   83 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


state 50

  107 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'
  109                          | struct_or_union IDENTIFIER .

    '{'  shift, and go to state 75

    $default  reduce using rule 109 (struct_or_union_specifier)


state 51

  108 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    type_specifier             go to state 76
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    struct_declaration_list    go to state 77
    struct_declaration         go to state 78
    specifier_qualifier_list   go to state 79
    enum_specifier             go to state 30
    type_qualifier             go to state 80


state 52

   85 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 85 (declaration_specifiers)


state 53

  185 compound_statement: '{' . '}'
  186                   | '{' . statement_list '}'
  187                   | '{' . declaration_list '}'
  188                   | '{' . declaration_list statement_list '}'
